[package]
name = "orange_international"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres", "json", "uuid"] }
redis = { version = "0.32.4", features = ["json", "uuid", "r2d2"] }
r2d2 = "0.8.10"
axum = { version = "0.8.4", features = ["json", "tokio"] }
axum-auth = "0.8.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.140"
serde_repr = "0.1.20"
void_log = "0.1.2"
chrono = { version = "0.4.41", features = ["serde", "now"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
argon2 = { version = "0.6.0-rc.0", features = ["std"] }