[package]
name = "orange_international"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres", "json", "uuid"] }
redis = { version = "1.0.1", features = ["json", "uuid", "r2d2"] }
r2d2 = "0.8.10"
axum = { version = "0.8.7", features = ["json", "tokio"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-msgpack = "0.5.0"
axum-auth = "0.8.1"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.147"
serde_repr = "0.1.20"
rmp-serde = "1.3.0"
void_log = "0.1.2"
chrono = { version = "0.4.42", features = ["serde", "now"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = { version = "0.6.0-rc.2", features = ["std", "getrandom"] }
bytes = "1.10.0"