[package]
name = "orange_international"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["full"] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "chrono",
    "postgres",
    "json",
    "uuid",
] }
redis = { version = "1.3.0", features = ["json", "uuid", "r2d2"] }
r2d2 = "0.8.10"
axum = { version = "0.8.9", features = ["json", "tokio"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-msgpack = "0.5.0"
axum-auth = "0.8.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.13"
serde_json = "1.0.150"
serde_repr = "0.1.20"
rmp-serde = "1.3.1"
void_log = "0.1.2"
chrono = { version = "0.4.45", features = ["serde", "now"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
bytes = "1.12.0"
lettre = "0.11.22"
